fix: add rule to prevent text overflowing in markdown (issue #521 pr #86)
* feat: disable copy when there are no text

* fix: add rule to prevent text overflowing in markdown

--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -17,6 +17,7 @@
   code {
     display: block;
     font-size: 12px;
+    white-space: pre-wrap;
     color: var(--chat-markdown-color-multi);
     background: var(--chat-markdown-bg);
     border: 1px solid var(--chat-markdown-border);
